--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Data Source
 spring.datasource.url = jdbc:mysql://localhost:3306/contacts_app?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = root
+spring.datasource.username = acousin
 spring.datasource.password = OpenWT74!
 
 ## Hibernate
